# openapi/amcrest-viewer.openapi.yaml
@@ -46,6 +46,38 @@ paths:
               application/json:
                 schema:
                     "$ref": "#/components/schemas/Camera"
+  "/api/cameras/{id}/live":
+      get:
+        summary: Get Live Stream
+        description: Get camera live stream
+        operationId: getCameraLiveStream
+        parameters:
+          - in: path
+            name: id
+            required: true
+            description: 'camera ID'
+            schema:
+              type: integer
+          - in: query
+            name: redirect
+            description: 'redirect request'
+            schema:
+              type: boolean
+              default: true
+        responses:
+            '200':
+              description: OK
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      uri:
+                        type: string
+                    required:
+                      - uri
+
+      
   "/api/cameras/{id}/files":
       get:
         summary: Get files
